--- a/mobile/code/login.html
+++ b/mobile/code/login.html
@@ -35,13 +35,12 @@
         	<label><input type="radio"  name="status" value="1" checked>教师登录</label>
         	<label><input type="radio" name="status" value="0">学生登录</label>
         </div>
-        <button type="button" ng-class='{active:loginform.$valid}'>登录</button>
+        <button type="button" ng-class='{active:loginform.$valid}' ng-disabled="loginform.$invalid">登录</button>
     </form>
-    <script src='../js/flexible.debug.js'></script>
+    <script src='../../bower_components/angular/angular.min.js'></script>
     <script src='../js/jquery-3.1.1.min.js'></script>
-    <script src='../js/angular.min.js'></script>
+    <script src='../js/flexible.debug.js'></script>
     <script src='../js/login.js'></script>
-    <!-- <script src='../dest/main.js'></script> -->
 </body>
 
 </html>
