--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<script>
+	location.href = 'mobile/code/login.html';
+</script>
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +10,5 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1>1111</h1>
 </body>
 </html>
