--- a/mobile/code/index.html
+++ b/mobile/code/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" type="text/css" href="../css/global.css">
     <link rel="stylesheet" href="../css/idangerous.swiper.css"> 
     <link rel="stylesheet" href="../css/homeView.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
    
 </head>
 
 <body>
     <!-- <div class="preloader">刷新中...</div> -->
-    <div ui-view></div>
+    <div ui-view class="content"></div>
     <footer>
         <a ui-sref="home" title="">作业</a>
         <a ui-sref="homeWork" title="">公告</a>
