--- a/mobile/code/login.html
+++ b/mobile/code/login.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">  <title></title>
     <title>作业管理系统</title>
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../studentCss/reset.css">
     <!-- <link rel="stylesheet" type="text/css" href="../dest/main.css"> -->
-    <link rel="stylesheet" type="text/css" href="../css/global.css">
-    <link rel="stylesheet" type="text/css" href="../css/login.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/global.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/login.css">
 </head>
 
 <body>
@@ -38,9 +38,9 @@
         <button type="button" ng-class='{active:loginform.$valid}' ng-disabled="loginform.$invalid">登录</button>
     </form>
     <script src='../../bower_components/angular/angular.min.js'></script>
-    <script src='../js/jquery-3.1.1.min.js'></script>
-    <script src='../js/flexible.debug.js'></script>
-    <script src='../js/login.js'></script>
+    <script src='../studentJs/jquery-3.1.1.min.js'></script>
+    <script src='../studentJs/flexible.debug.js'></script>
+    <script src='../studentJs/login.js'></script>
 </body>
 
 </html>
