--- a/mobile/code/studentIndex.html
+++ b/mobile/code/studentIndex.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">  <title></title>
     <title></title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../css/global.css">
-    <link rel="stylesheet" href="../css/idangerous.swiper.css"> 
-    <link rel="stylesheet" href="../css/homeView.css">
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" href="../studentCss/reset.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/global.css">
+    <link rel="stylesheet" href="../studentCss/idangerous.swiper.css"> 
+    <link rel="stylesheet" href="../studentCss/homeView.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/index.css">
    
 </head>
 
@@ -24,15 +24,16 @@
     </footer>
 </body>
 <!-- <script src='../js/jquery-3.1.1.min.js'></script> -->
-<script src='../dest/main.js'></script>
+<!-- <script src='../dest/main.js'></script> -->
 <!-- <script src='../js/idangerous.swiper.min.js'></script> -->
 <script src='../../bower_components/angular/angular.min.js'></script>
 <script src='../../bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
-<script src='../config.js'></script>
-<script src='../controller/homeViewController.js'></script>
-<script src='../controller/meViewController.js'></script>
-<script src='../controller/informViewController.js'></script>
-<script src='../controller/tipViewController.js'></script>
+<script src='../studentJs/flexible.debug.js'></script>
+<script src='../studentConfig.js'></script>
+<script src='../studentController/homeViewController.js'></script>
+<script src='../studentController/meViewController.js'></script>
+<script src='../studentController/informViewController.js'></script>
+<script src='../studentController/tipViewController.js'></script>
 
 
 </html>
