--- a/mobile/teacherViews/homeView.html
+++ b/mobile/teacherViews/homeView.html
@@ -1,13 +1,16 @@
 <ul class="state clear">
-    <li class="start" ng-click='tab(0)' ng-class='{true:"active",false:""}[st==0]'>未完成</li>
-    <li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已完成</li>
+    <li class="start" ng-click='tab(0)' ng-class='{true:"active",false:""}[st==0]'>未批阅</li>
+    <li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已批阅</li>
 </ul>
+<div class='new-work'>
+	发布新作业
+</div>
 <ul class="table-content">
     <li ng-show='st==0'>
         <h4>第一章测试</h4>
         <div class="questions">
             <h5>单选题</h5>
-            <div>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="radio" name="an1">孙悟空
@@ -21,8 +24,8 @@
                 <label for="">
                     <input type="radio" name="an1">金角大王
                 </label>
-            </div>
-            <div>
+            </form>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="radio" name="an1">孙悟空
@@ -36,26 +39,11 @@
                 <label for="">
                     <input type="radio" name="an1">金角大王
                 </label>
-            </div>
-            <div>
-                <p>1:以下哪些同学追随过唐僧</p>
-                <label for="">
-                    <input type="radio" name="an1">孙悟空
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">佛祖
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">龙马
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">金角大王
-                </label>
-            </div>
+            </form>
         </div>
         <div class="questions">
             <h5>多选题</h5>
-            <div>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="checkbox">孙悟空
@@ -69,8 +57,8 @@
                 <label for="">
                     <input type="checkbox">金角大王
                 </label>
-            </div>
-            <div>
+            </form>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="checkbox">孙悟空
@@ -84,22 +72,7 @@
                 <label for="">
                     <input type="checkbox">金角大王
                 </label>
-            </div>
-            <div>
-                <p>1:以下哪些同学追随过唐僧</p>
-                <label for="">
-                    <input type="checkbox">孙悟空
-                </label>
-                <label for="">
-                    <input type="checkbox">佛祖
-                </label>
-                <label for="">
-                    <input type="checkbox">龙马
-                </label>
-                <label for="">
-                    <input type="checkbox">金角大王
-                </label>
-            </div>
+            </form>
         </div>
         <div class="questions text">
             <h5>填空题</h5>
@@ -113,12 +86,21 @@
             	<label>1:哪些同学追随过唐僧:<input type="text" name="" value=""></label>
             </div>
         </div>
+        <div class="questions text">
+            <h5>简答题</h5>
+            <div>
+                <label>1:那些同学追随过唐僧:<textarea></textarea></label>
+            </div>
+            <div>
+                <label>1:哪些同学追随过唐僧:<textarea></textarea></label>
+            </div>
+        </div>
     </li>
     <li ng-show='st==1'>
         <h4>第二章测试</h4>
         <div class="questions">
             <h5>单选题</h5>
-            <div>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="radio" name="an1" checked>孙悟空
@@ -132,8 +114,8 @@
                 <label for="">
                     <input type="radio" name="an1">金角大王
                 </label>
-            </div>
-            <div>
+            </form>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="radio" name="an1" checked>孙悟空
@@ -147,26 +129,11 @@
                 <label for="">
                     <input type="radio" name="an1">金角大王
                 </label>
-            </div>
-            <div>
-                <p>1:以下哪些同学追随过唐僧</p>
-                <label for="">
-                    <input type="radio" name="an1" checked>孙悟空
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">佛祖
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">龙马
-                </label>
-                <label for="">
-                    <input type="radio" name="an1">金角大王
-                </label>
-            </div>
+            </form>
         </div>
         <div class="questions">
             <h5>多选题</h5>
-            <div>
+            <form>
                 <p>1:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="checkbox" checked>孙悟空
@@ -180,8 +147,8 @@
                 <label for="">
                     <input type="checkbox">金角大王
                 </label>
-            </div>
-            <div>
+            </form>
+            <form>
                 <p>2:以下哪些同学追随过唐僧</p>
                 <label for="">
                     <input type="checkbox" checked>孙悟空
@@ -195,22 +162,7 @@
                 <label for="">
                     <input type="checkbox">金角大王
                 </label>
-            </div>
-            <div>
-                <p>3:以下哪些同学追随过唐僧</p>
-                <label for="">
-                    <input type="checkbox" checked>孙悟空
-                </label>
-                <label for="">
-                    <input type="checkbox">佛祖
-                </label>
-                <label for="">
-                    <input type="checkbox" checked>龙马
-                </label>
-                <label for="">
-                    <input type="checkbox">金角大王
-                </label>
-            </div>
+            </form>
            
         </div>
         <div class="questions text">
@@ -226,4 +178,7 @@
             </div>
         </div>
     </li>
+     <button type="button" class='submit'>提交</button>
+    <button type="button" class='exit'>退出</button>
 </ul>
+
