--- a/mobile/code/myInfo.html
+++ b/mobile/code/myInfo.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">	<title></title>
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/global.css">
-	<link rel="stylesheet" type="text/css" href="../css/myinfo.css">
+	<link rel="stylesheet" href="../teacherCss/reset.css">
+	<link rel="stylesheet" href="../teacherCss/global.css">
+	<link rel="stylesheet" type="text/css" href="../teacherCss/myinfo.css">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
 	<button type="button" class="save">保存</button>
 	<button type="button" class="cancel">取消</button>
 	<!-- <script src='../js/flexible.debug.js'></script> -->
-	<script src='../js/main.js'></script>
-	<script src='../js/myinfo.js'></script>
+	<script src='../teacherJs/main.js'></script>
+	<script src='../teacherJs/myinfo.js'></script>
 </body>
 </html>
