--- a/mobile/studentViews/homeView.html
+++ b/mobile/studentViews/homeView.html
@@ -220,6 +220,9 @@
             </li>
         </ul>
     </li>
-    <button type="button" class='submit'>提交</button>
+    <div class='button'>
+    <button type="button" class='submit' ng-click='submit()'>提交</button>
     <button type="button" class='exit'>退出</button>
+    </div>
 </ul>
+
