--- a/mobile/studentViews/tipView.html
+++ b/mobile/studentViews/tipView.html
@@ -1,8 +1,8 @@
-<ul>
-	<li><a href="" title="">2011年公告</a></li>
-	<li><a href="" title="">2012年公告</a></li>
-	<li><a href="" title="">2013年公告</a></li>
-	<li><a href="" title="">2014年公告</a></li>
-	<li><a href="" title="">2015年公告</a></li>
-	<li><a href="" title="">2016年公告</a></li>
+<ul class='tip'>
+	<li><a href="" title="" ng-click='tipContent(2011)'>2011年公告</a></li>
+	<li><a href="" title="" ng-click='tipContent(2012)'>2012年公告</a></li>
+	<li><a href="" title="" ng-click='tipContent(2013)'>2013年公告</a></li>
+	<li><a href="" title="" ng-click='tipContent(2014)'>2014年公告</a></li>
+	<li><a href="" title="" ng-click='tipContent(2015)'>2015年公告</a></li>
+	<li><a href="" title="" ng-click='tipContent(2016)'>2016年公告</a></li>
 </ul>
