--- a/mobile/code/studentIndex.html
+++ b/mobile/code/studentIndex.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../studentCss/idangerous.swiper.css"> 
     <link rel="stylesheet" href="../studentCss/homeView.css">
     <link rel="stylesheet" type="text/css" href="../studentCss/index.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/tip.css">
    
 </head>
 
@@ -34,6 +35,7 @@
 <script src='../studentController/meViewController.js'></script>
 <script src='../studentController/informViewController.js'></script>
 <script src='../studentController/tipViewController.js'></script>
+<script src='../studentJs/work.js'></script>
 
 
 </html>
