--- a/mobile/code/teacherIndex.html
+++ b/mobile/code/teacherIndex.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../teacherCss/idangerous.swiper.css"> 
     <link rel="stylesheet" href="../teacherCss/homeView.css">
     <link rel="stylesheet" type="text/css" href="../teacherCss/index.css">
+    <link rel="stylesheet" type="text/css" href="../teacherCss/tip.css">
    
 </head>
 <body>
