--- a/mobile/code/studentIndex.html
+++ b/mobile/code/studentIndex.html
@@ -30,6 +30,8 @@
 <!-- <script src='../js/idangerous.swiper.min.js'></script> -->
 <script src='../../bower_components/angular/angular.min.js'></script>
 <script src='../../bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
+<script src='../js/ui-bootstrap-custom-2.4.0.min.js'></script>
+<script src='../js/ui-bootstrap-custom-tpls-2.4.0.min.js'></script>
 <script src='../studentJs/flexible.debug.js'></script>
 <script src='../studentConfig.js'></script>
 <script src='../studentController/homeViewController.js'></script>
