--- a/mobile/code/teacherIndex.html
+++ b/mobile/code/teacherIndex.html
@@ -29,6 +29,8 @@
 <script src='../teacherJs/flexible.debug.js'></script>
 <script src='../../bower_components/angular/angular.min.js'></script>
 <script src='../../bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
+<script src='../js/ui-bootstrap-custom-2.4.0.min.js'></script>
+<script src='../js/ui-bootstrap-custom-tpls-2.4.0.min.js'></script>
 <script src='../teacherConfig.js'></script>
 <script src='../teacherController/homeViewController.js'></script>
 <script src='../teacherController/meViewController.js'></script>
