--- a/mobile/studentViews/homeView.html
+++ b/mobile/studentViews/homeView.html
@@ -8,19 +8,19 @@
             <li>
                 <h4 ng-click='par_btn(0)'>第一章</h4>
                 <ul ng-show='work_st == 0'>
-                    <li>第一节</li>
-                    <li>第二节</li>
-                    <li>第三节</li>
-                    <li>第四节</li>
+                    <li ng-click='show_work()'>第一节</li>
+                    <li ng-click='show_work()'>第二节</li>
+                    <li ng-click='show_work()'>第三节</li>
+                    <li ng-click='show_work()'>第四节</li>
                 </ul>
             </li>
             <li>
                 <h4 ng-click='par_btn(1)'>第二章</h4>
                 <ul ng-show='work_st == 1'>
-                    <li>第一节</li>
-                    <li>第二节</li>
-                    <li>第三节</li>
-                    <li>第四节</li>
+                    <li ng-click='show_work()'>第一节</li>
+                    <li ng-click='show_work()'>第二节</li>
+                    <li ng-click='show_work()'>第三节</li>
+                    <li ng-click='show_work()'>第四节</li>
                 </ul>
             </li>
         </ul>
