--- a/mobile/teacherViews/homeView.html
+++ b/mobile/teacherViews/homeView.html
@@ -2,6 +2,7 @@
     <li class="start" ng-click='tab(0)' ng-class='{true:"active",false:""}[st==0]'>未完成</li>
     <li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已完成</li>
 </ul>
+<button type="" class="newHomework" ng-click='newHomework()'>发布新作业</button>
 <ul class="table-content">
     <li ng-show='st==0'>
         <ul class='questionList'>
