--- a/mobile/studentViews/tipView.html
+++ b/mobile/studentViews/tipView.html
@@ -5,9 +5,9 @@
         <li ng-class='{true:"active",false:""}[ann_st==2]' ng-click='ann_tab(2)'>其他</li>
     </ul>
     <ul class='ann_content clear'>
-        <li ng-repeat='item in ann_date' ng-click='showAnn(item.content)' class="clear">
-            <a href="" title="" ng-click='tipContent(2011)'>{{ann_content}}</a>
-            <span>{{item}}</span>
+        <li ng-repeat='item in getData' ng-click='showAnn(item.ann_content)' class="clear">
+            <a href="" title="">{{item.ann_title}}</a>
+            <span>{{item.ann_time}}</span>
         </li>
     </ul>
      <ul class="pageList clear" uib-pagination total-items="countAll" items-per-page='count' ng-model="page" boundary-links="true" max-size="maxSize" force-ellipses="true" previous-text="上一页" next-text="下一页" first-text="首页" last-text="尾页" ng-change="pageChanged()" id="pageChange">
