--- a/mobile/code/teacherIndex.html
+++ b/mobile/code/teacherIndex.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../teacherCss/index.css">
     <link rel="stylesheet" type="text/css" href="../teacherCss/tip.css">
     <link rel="stylesheet" type="text/css" href="../teacherCss/inform.css">
+    <link rel="stylesheet" type="text/css" href="../teacherCss/me.css">
 </head>
 <body>
     <!-- <div class="preloader">刷新中...</div> -->
