--- a/mobile/code/myInfo.html
+++ b/mobile/code/myInfo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='infoApp'>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">	<title></title>
@@ -8,21 +8,20 @@
 	<link rel="stylesheet" type="text/css" href="../teacherCss/myinfo.css">
 
 </head>
-<body>
+<body ng-controller='infoController'>
 	<div class="pre">
 		&lt;
 	</div>
 	<div class="photo">
 		<img src="../images/timg.jpg" alt="">
-		<input type="" name="">
 	</div>
 	<div>
 		<span>学&nbsp;&nbsp;&nbsp;号:</span>
-		<input type="text" readonly="" name="" value="201307104121">
+		<input type="text" readonly="" readonly="" name="" value="201307104121">
 	</div>
 	<div>
 		<span>姓&nbsp;&nbsp;&nbsp;名:</span>
-		<input type="text" readonly="" name="" value="化晨鑫">
+		<input type="text" readonly="" readonly="" name="" value="化晨鑫">
 	</div>
 	<div>
 		<span>性&nbsp;&nbsp;&nbsp;别:</span>
@@ -34,12 +33,17 @@
 	</div>
 	<div>
 		<span>手机号:</span>
-		<input type="text" name="" value="15836531741">
+		<input class="tel" type="text" name=""  value="15836531741">
 	</div>
-	<button type="button" class="save">保存</button>
-	<button type="button" class="cancel">取消</button>
-	<!-- <script src='../js/flexible.debug.js'></script> -->
-	<script src='../teacherJs/main.js'></script>
+	<div>
+		<span>QQ:</span>
+		<input class="qq" type="text" name="" value="1358407547">
+	</div>
+	<button type="button" class="save" ng-click='save()'>保存</button>
+	<button type="button" class="cancel" ng-click='cancel()'>取消</button>
+	<script src='../teacherJs/flexible.debug.js'></script>
+	<script src='../../bower_components/angular/angular.min.js'></script>
+	<!-- <script src='../teacherJs/main.js'></script> -->
 	<script src='../teacherJs/myinfo.js'></script>
 </body>
 </html>
