--- a/mobile/code/add_ann.html
+++ b/mobile/code/add_ann.html
@@ -35,6 +35,7 @@
     	<button type="" class="abb_cancel" ng-click='annCancel()'>取消</button>
     </div>
     <script src='../teacherJs/flexible.debug.js'></script>
+    <script src='../../bower_components/jquery/dist/jquery.min.js'></script>
     <script src='../../bower_components/angular/angular.min.js'></script>
     <script src='../teacherJs/add_ann.js'></script>
 </body>
