--- a/mobile/code/teacherIndex.html
+++ b/mobile/code/teacherIndex.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">  <title></title>
     <title></title>
     <link rel="stylesheet" href="../teacherCss/reset.css">
-    <link rel="stylesheet" type="text/css" href="../teacherCss/global.css">
+    <link rel="stylesheet" type="text/css" href="../studentCss/global.css">
     <link rel="stylesheet" href="../teacherCss/idangerous.swiper.css"> 
     <link rel="stylesheet" href="../teacherCss/homeView.css">
     <link rel="stylesheet" type="text/css" href="../teacherCss/index.css">
@@ -14,20 +14,24 @@
     <link rel="stylesheet" type="text/css" href="../teacherCss/inform.css">
     <link rel="stylesheet" type="text/css" href="../teacherCss/me.css">
 </head>
-<body>
+<body ng-controller='grayController'>
     <!-- <div class="preloader">刷新中...</div> -->
-    <div ui-view class="content"></div>
+    <div class="gray" >{{grayTip}}</div>
+    <div ui-view class="content">
+        
+    </div>
     <footer class="clear">
-        <li><a ui-sref="home" title="" ui-sref-active="active">作业</a></li>
-        <li><a ui-sref="homeWork" title="" ui-sref-active="active">公告</a></li>
-        <li><a ui-sref="inform" title="" ui-sref-active="active">答疑</a></li>
-        <li><a ui-sref="me" title="" ui-sref-active="active">我的</a></li>
+        <li style="border-left: 0.031rem dotted gray;"><a ui-sref="home" title="" ui-sref-active="active" class="iconfont" ng-click='grayBtn(0)'>&#xe604; 作业</a></li>
+        <li ng-click='grayBtn(1)'><a ui-sref="homeWork" title="" ui-sref-active="active" class="iconfont">&#xe600; 公告</a></li>
+        <li ng-click='grayBtn(2)'><a ui-sref="inform" title="" ui-sref-active="active" class="iconfont">&#xe61a; 答疑</a></li>
+        <li ng-click='grayBtn(3)'><a ui-sref="me" title="" ui-sref-active="active" class="iconfont">&#xe601; 我的</a></li>
     </footer>
 </body>
 <!-- <script src='../js/jquery-3.1.1.min.js'></script> -->
 <!-- <script src='../teacherDest/main.js'></script> -->
 <!-- <script src='../js/idangerous.swiper.min.js'></script> -->
 <script src='../teacherJs/flexible.debug.js'></script>
+<script src='../../bower_components/jquery/dist/jquery.min.js'></script>
 <script src='../../bower_components/angular/angular.min.js'></script>
 <script src='../../bower_components/angular-ui-router/release/angular-ui-router.min.js'></script>
 <script src='../js/ui-bootstrap-custom-2.4.0.min.js'></script>
@@ -37,6 +41,6 @@
 <script src='../teacherController/meViewController.js'></script>
 <script src='../teacherController/informViewController.js'></script>
 <script src='../teacherController/tipViewController.js'></script>
-
+<script src='../js/config.js'></script>
 
 </html>
