--- a/mobile/teacherViews/informView.html
+++ b/mobile/teacherViews/informView.html
@@ -5,9 +5,9 @@
     </ul>
     <ul class='ann_content clear'>
          <li ng-repeat='item in ann_date' ng-click='showQuestion(item.content)'  class="clear">
-
             <a href="" title="">{{item.title}}</a>
             <span>{{item.data}}</span>
+            <span class="dealQuestion" ng-click='dealQuestion()'>答疑</span>
         </li>
     </ul>
      <ul class="pageList clear" uib-pagination total-items="countAll" items-per-page='count' ng-model="page" boundary-links="true" max-size="maxSize" force-ellipses="true" previous-text="上一页" next-text="下一页" first-text="首页" last-text="尾页" ng-change="pageChanged()" id="pageChange">
