--- a/mobile/code/changePassword.html
+++ b/mobile/code/changePassword.html
@@ -24,6 +24,7 @@
 	<button type="button" class="save" ng-click='save()'>修改</button>
 	<button type="button" class="cancel" ng-click='cancel()'>取消</button>
 	<script src='../teacherJs/flexible.debug.js'></script>
+	<script src='../../bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='../../bower_components/angular/angular.min.js'></script>
 	<script>
 		var app = angular.module('changeApp',[]);
@@ -32,12 +33,27 @@
 				history.go(-1);
 			}
 			$scope.save = function(){
-				console.log($scope.oldPwd)
+				if($scope.newPwd != alignPwd){
+					alert('两次密码输入不一致！');
+					return;
+				}
 				if($scope.oldPwd == null || $scope.newPwd == null || $scope.aginPwd == null){
 					alert('密码不能为空');
 				}
 				else{
 					alert('修改成功');
+					// $.ajax({
+					// 	url:'http://ourworkmanager.cn/myine/userinfo/userinfoupdate.php',
+					// 	method:'post',
+					// 	data:{
+					// 		username:localStrolage.username,
+					// 		newPasswoed:$scope.newPwd,
+					// 		oldPassword:$scope.oldPwd
+					// 	},
+					// 	success:function(res){
+					// 		alert(res.data);
+					// 	}
+					// })
 					location.href = '../code/login.html';
 				}
 			}
