--- a/mobile/code/myInfo.html
+++ b/mobile/code/myInfo.html
@@ -17,33 +17,35 @@
 	</div>
 	<div>
 		<span>学&nbsp;&nbsp;&nbsp;号:</span>
-		<input type="text" readonly="" readonly="" name="" value="201307104121">
+		<input type="text" readonly="" readonly="" name="" ng-model='sno'>
 	</div>
 	<div>
 		<span>姓&nbsp;&nbsp;&nbsp;名:</span>
-		<input type="text" readonly="" readonly="" name="" value="化晨鑫">
+		<input type="text" readonly="" readonly="" name="" ng-model='name'>
 	</div>
 	<div>
 		<span>性&nbsp;&nbsp;&nbsp;别:</span>
-		<input type="text" name="" readonly="" value="男">
+		<input type="text" name="" readonly=""  ng-model='sex'>
+	</div>
+	<div>
+		<span>班&nbsp;&nbsp;&nbsp;级:</span>
+		<input type="text" name="" readonly=""  ng-model='class'>
 	</div>
 	<div>
 		<span>院&nbsp;&nbsp;&nbsp;系:</span>
-		<input type="text" name="" readonly="" value="软件学院">
+		<input type="text" name="" readonly=""  ng-model='department'>
 	</div>
 	<div>
 		<span>手机号:</span>
-		<input class="tel" type="text" name=""  value="15836531741">
+		<input class="tel" type="text" name="" ng-model='tel'>
 	</div>
-	<div>
-		<span>QQ:</span>
-		<input class="qq" type="text" name="" value="1358407547">
-	</div>
+	
 	<button type="button" class="save" ng-click='save()'>保存</button>
 	<button type="button" class="cancel" ng-click='cancel()'>取消</button>
 	<script src='../teacherJs/flexible.debug.js'></script>
+	<script src='../../bower_components/jquery/dist/jquery.min.js'></script>
 	<script src='../../bower_components/angular/angular.min.js'></script>
 	<!-- <script src='../teacherJs/main.js'></script> -->
-	<script src='../teacherJs/myinfo.js'></script>
+	<script src='../studentJs/myinfo.js'></script>
 </body>
 </html>
