--- a/mobile/studentViews/homeView.html
+++ b/mobile/studentViews/homeView.html
@@ -3,46 +3,122 @@
     <li ng-click='tab(1)' ng-class='{true:"active",false:""}[st==1]'>已完成</li>
 </ul>
 <ul class="table-content">
+    <!-- 未完成 -->
     <li ng-show='st==0'>
-        <ul class='questionList'>
+        <ul class='pro'>
             <li>
-                <h4 ng-click='par_btn(0)'>第一章</h4>
-                <ul ng-show='work_st == 0'>
-                    <li ng-click='show_work()'>第一节</li>
-                    <li ng-click='show_work()'>第二节</li>
-                    <li ng-click='show_work()'>第三节</li>
-                    <li ng-click='show_work()'>第四节</li>
+                <h1 ng-click='sub1()'>操作系统</h1>
+                <ul class='questionList'  class='zhang'>
+                    <li>
+                        <h4 ng-click='par_btn(0)'>第一章</h4>
+                        <ul class='jie'>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4 ng-click='par_btn(1)'>第二章</h4>
+                        <ul>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li>
-                <h4 ng-click='par_btn(1)'>第二章</h4>
-                <ul ng-show='work_st == 1'>
-                    <li ng-click='show_work()'>第一节</li>
-                    <li ng-click='show_work()'>第二节</li>
-                    <li ng-click='show_work()'>第三节</li>
-                    <li ng-click='show_work()'>第四节</li>
+                <h1 ng-click='sub2()'>javascript</h1>
+                <ul class='questionList'>
+                    <li>
+                        <h4 ng-click='par_btn(0)'>第一章</h4>
+                        <ul>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4 ng-click='par_btn(1)'>第二章</h4>
+                        <ul>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                     <li>
+                        <h4 ng-click='par_btn(1)'>第二章</h4>
+                        <ul>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                     <li>
+                        <h4 ng-click='par_btn(1)'>第二章</h4>
+                        <ul>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
     </li>
+    <!-- 已完成 -->
     <li ng-show='st==1'>
-         <ul class='questionList'>
+        <ul>
             <li>
-                <h4 ng-click='par_btn(0)'>第一章</h4>
-                <ul ng-show='work_st == 0'>
-                    <li ng-click='work_content()'>第一节</li>
-                    <li>第二节</li>
-                    <li>第三节</li>
-                    <li>第四节</li>
+                <h1 ng-click='sub1()' >操作系统</h1>
+                <ul class='questionList'  ng-show='os == true'>
+                    <li>
+                        <h4 ng-click='par_btn(0)'>第3章</h4>
+                        <ul ng-show='work_st == 0'>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4 ng-click='par_btn(1)'>第4章</h4>
+                        <ul ng-show='work_st == 1'>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li>
-                <h4 ng-click='par_btn(1)'>第二章</h4>
-                <ul ng-show='work_st == 1'>
-                    <li>第一节</li>
-                    <li>第二节</li>
-                    <li>第三节</li>
-                    <li>第四节</li>
+                <h1 ng-click='sub2()'>javascript</h1>
+                <ul class='questionList' ng-show='js == true'>
+                    <li>
+                        <h4 ng-click='par_btn(0)'>第3章</h4>
+                        <ul ng-show='work_st == 0'>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4 ng-click='par_btn(1)'>第4章</h4>
+                        <ul ng-show='work_st == 1'>
+                            <li ng-click='show_work()'>第一节</li>
+                            <li ng-click='show_work()'>第二节</li>
+                            <li ng-click='show_work()'>第三节</li>
+                            <li ng-click='show_work()'>第四节</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
