--- a/mobile/studentViews/meView.html
+++ b/mobile/studentViews/meView.html
@@ -1,5 +1,5 @@
 <ul class="me">
 	<li><a href="../code/myInfo.html" title="">我的信息</a></li>
 	<li><a href="../code/changePassword.html" title="">修改密码</a></li>
-	<li><a href="../code/login.html" title="">注销</a></li>
+	<li><a href="../code/login.html" title="" ng-click = 'logout()'>注销</a></li>
 </ul>
