--- a/mobile/teacherViews/homeView.html
+++ b/mobile/teacherViews/homeView.html
@@ -9,10 +9,10 @@
         <ul>
             <li>
                 <h1 ng-click='sub1()' >操作系统</h1>
-                <ul class='questionList'  ng-show='os == true'>
+                <ul class='questionList'>
                     <li>
                         <h4 ng-click='par_btn(0)'>第一章</h4>
-                        <ul ng-show='work_st == 0'>
+                        <ul>
                             <li ng-click='show_work()'>第一节</li>
                             <li ng-click='show_work()'>第二节</li>
                             <li ng-click='show_work()'>第三节</li>
@@ -21,7 +21,7 @@
                     </li>
                     <li>
                         <h4 ng-click='par_btn(1)'>第二章</h4>
-                        <ul ng-show='work_st == 1'>
+                        <ul>
                             <li ng-click='show_work()'>第一节</li>
                             <li ng-click='show_work()'>第二节</li>
                             <li ng-click='show_work()'>第三节</li>
@@ -32,10 +32,10 @@
             </li>
             <li>
                 <h1 ng-click='sub2()'>javascript</h1>
-                <ul class='questionList' ng-show='js == true'>
+                <ul class='questionList'>
                     <li>
                         <h4 ng-click='par_btn(0)'>第一章</h4>
-                        <ul ng-show='work_st == 0'>
+                        <ul>
                             <li ng-click='show_work()'>第一节</li>
                             <li ng-click='show_work()'>第二节</li>
                             <li ng-click='show_work()'>第三节</li>
@@ -44,7 +44,7 @@
                     </li>
                     <li>
                         <h4 ng-click='par_btn(1)'>第二章</h4>
-                        <ul ng-show='work_st == 1'>
+                        <ul>
                             <li ng-click='show_work()'>第一节</li>
                             <li ng-click='show_work()'>第二节</li>
                             <li ng-click='show_work()'>第三节</li>
