--- a/mobile/teacherViews/informView.html
+++ b/mobile/teacherViews/informView.html
@@ -1,7 +1,7 @@
 <div id="inform">
     <ul class="ann_title clear">
-        <li ng-class='{true:"active",false:""}[ann_st==0]' ng-click='ann_tab(0)'>答疑</li>
-        <li ng-class='{true:"active",false:""}[ann_st==1]' ng-click='ann_tab(1)'>统计</li>
+        <li ng-class='{true:"active",false:""}[ann_st==0]' ng-click='ann_tab(0)'>未答疑</li>
+        <li ng-class='{true:"active",false:""}[ann_st==1]' ng-click='ann_tab(1)'>已答疑</li>
     </ul>
     <ul class='ann_content clear'>
         <li ng-repeat='item in ann_date' ng-click='showQuestion(item.solve_id,item.solution)'  class="clear">
